Fixing layout bug in circular labels with an icon

--- a/client/app/styles/app.scss
+++ b/client/app/styles/app.scss
@@ -28,6 +28,10 @@ a {
   right: .25em !important;
 }
 
+.ui.circular.label > .icon {
+  margin-right: 0;
+}
+
 // To use absolute position labels
 table.ui.table td {
   position: relative;
